fix(theme): improve color contrast of live code block header (#11120)
fix: Ensure accessibility of live code block contrast with background update

--- a/packages/docusaurus-theme-live-codeblock/src/theme/Playground/Header/styles.module.css
+++ b/packages/docusaurus-theme-live-codeblock/src/theme/Playground/Header/styles.module.css
@@ -16,6 +16,6 @@
 }
 
 .playgroundHeader:first-of-type {
-  background: var(--ifm-color-emphasis-600);
+  background: var(--ifm-color-emphasis-700);
   color: var(--ifm-color-content-inverse);
 }
